# alerta-chuva

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  testando.py
.github/workflows/: github-actions.yml
alerta_chuva/: check.py  chuva.py  coletar.py
alerta_chuva/api/: main.py
alerta_chuva/api/routers/: __init__.py  rain_router.py
alerta_chuva/commom/: aux.py  entities.py  types.py
alerta_chuva/domain/: __init__.py  model.py
alerta_chuva/domain/entities/: radar.py  rain.py  river.py
alerta_chuva/domain/repositories/: __init__.py  app_state.py  radar_repository.py  rain_repository.py  repositories.py
alerta_chuva/domain/usecases/: rain_cases.py
alerta_chuva/enums/: locais.py
alerta_chuva/exceptions/: radar_exceptions.py
alerta_chuva/infra/: db.py
alerta_chuva/parser/: normalize_text.py  parser.py
alerta_chuva/process/: acumulado.py  crawler.py
alerta_chuva/process/pages/: elements.py  page.py
alerta_chuva/process/radar/: verificar_imagem_radar.py
alerta_chuva/services/acumulado/: chuva.py
alerta_chuva/services/crawler/: crawler.py
alerta_chuva/services/radar/: radar.py
alerta_chuva/services/rain/: rain.py
alerta_chuva/utils/: crawler.py  imagem.py  text.py
tests/: conftest.py  locais.txt  test_aux.py  test_check.py  test_chuva.py  test_coleta_dados.py  test_crawler.py  test_db.py  test_model.py  test_parser.py  test_radar.py  test_radar_repository.py  test_rio.py  test_util.py  test_utils.py
tests/data/: IRAJA.html
tests/test_integration/: test_radar_integrations.py
tests/zips/: anchieta_199801_Plv.txt  bangu_199801_Plv.txt  campo_grande_199801_Plv.txt  cidade_de_deus_199812_Plv.txt  copacabana_199801_Plv.txt  grajau_199801_Plv.txt  grande_meier_199801_Plv.txt  grota_funda_199801_Plv.txt  guaratiba_199801_Plv.txt  ilha_do_governador_199801_Plv.txt  iraja_199801_Plv.txt  jardim_botanico_199801_Plv.txt  madureira_199801_Plv.txt  penha_199801_Plv.txt  piedade_199801_Plv.txt  recreio_199801_Plv.txt  riocentro_199801_Plv.txt  rocinha_199801_Plv.txt  santa_cruz_199801_Plv.txt  santa_teresa_199801_Plv.txt  saude_199801_Plv.txt  sepetiba_199801_Plv.txt  tanque_199801_Plv.txt  tijuca_199801_Plv.txt  urca_199801_Plv.txt
transbordou/: acumulado.py  chuva.py  coletar.py  locais.py
transbordou/domain/: domain.py
transbordou/infra/: db.py
transbordou/process/: acumulado.py  crawler.py
transbordou/utils/: crawler.py  imagem.py  text.py
(+8 files in other folders)
