[tool.poetry]
name = "transbordou"
version = "0.1.0"
description = "Coletar dados se o rio acari transbordou coletando dados do sistema meteriologico e perguntando a mim se o rio transbordou apos detectar chuva maior que 2.5 mm/h"
authors = ["Rodrigoneal <rodrigho2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
httpx = "^0.25.0"
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.22"
python-dateutil = "^2.8.2"
unidecode = "^1.3.7"
aiosqlite = "^0.19.0"
pydantic = "^2.4.2"
webdriver-manager = "^4.0.1"
pandas = "^2.1.2"
selenium-tools = { git = "https://github.com/rodrigoneal/selenium-tools" }
opencv-python = "^4.8.1.78"
pillow = "^10.1.0"
pytest-mock = "^3.12.0"
joblib = "^1.3.2"
numba = "^0.58.1"
pytesseract = "^0.3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-sugar = "^0.9.7"
pytest-httpx = "^0.26.0"
pytest-asyncio = "^0.21.1"
coverage = "^7.3.2"


[tool.poetry.group.linter.dependencies]
isort = "^5.12.0"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-p no:warnings"

[tool.coverage.run]
omit = [
    "/tests/*",
    ]