[tool.poetry]
name = "alerta-chuva"
version = "0.1.0"
description = "Coleta os dados de chuva e cria um alerta caso seja detectado algo que possa impactar no rio acari perto de casa"
authors = ["Rodrigoneal <rodrigho2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
httpx = "^0.25.0"
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.22"
python-dateutil = "^2.8.2"
unidecode = "^1.3.7"
aiosqlite = "^0.19.0"
pydantic = "^2.4.2"
pandas = "^2.1.2"
pillow = "^10.1.0"
pytesseract = "^0.3.10"
requests = "^2.31.0"
joblib = "^1.3.2"
easyocr = "^1.7.1"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.2"
ipyleaflet = "^0.17.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-sugar = "^0.9.7"
pytest-httpx = "^0.26.0"
pytest-asyncio = "^0.21.1"
coverage = "^7.3.2"


[tool.poetry.group.linter.dependencies]
isort = "^5.12.0"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-p no:warnings"

[tool.coverage.run]
omit = [
    "/tests/*",
    ]